fix notification PUT endpoints and keep drawer visible when in notification modal

--- a/src/components/ChatDrawer/ChatDrawer.scss
+++ b/src/components/ChatDrawer/ChatDrawer.scss
@@ -2,6 +2,7 @@
   /* font-family: sans-serif; */
   font-family: var(--chata-drawer-font-family), sans-serif;
   line-height: 22px;
+  z-index: 10000;
 }
 
 .chata-drawer.disable-selection {
